<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:text="@string/checkliste_vor_dem_meeting"
                    android:textColor="@color/dark_gray"
                    android:textSize="32sp" />

                <ImageView
                    android:src="@drawable/ic_baseline_image_24"
                    android:minHeight="150dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo" />

                <!-- Paragraph -->
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/checkliste_beschreibung"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical">
                    <!-- Headline -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_looks_one_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/desinfektionsmittel_bereit"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <!-- Text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:text="@string/info_desinfect"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical">
                    <!-- Headline -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_looks_two_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/_3g_regelung_o_gepr_ft"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <!-- Text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:text="@string/xg_erklerung"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    >
                    <!-- Headline -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_looks_three_24"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/masken_plexiglas_gepr_ft"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <!-- Text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:text="@string/maske_erklarung"
                        android:textColor="@color/black" />
                </LinearLayout>

                <!-- Paragraph -->

                <!-- Paragraph -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_marginTop="32dp"
                    >
                    <!-- Headline -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_looks_four_24"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/abst_nde_gew_hrleistet"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <!-- Text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:text="@string/abstand_erklarung"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</layout>