<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:text="@string/begriffserkl_rung"
                    android:textColor="@color/dark_gray"
                    android:textSize="32sp" />

                <ImageView
                    android:src="@drawable/ic_baseline_coronavirus_24"
                    android:minHeight="150dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo" />

                <!-- Paragraph -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    >
                    <!-- Headline -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_looks_one_24"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/neuinfektionen"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <!-- Text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:text="@string/neuinfektion_def"
                        android:textColor="@color/black" />
                </LinearLayout>

                <!-- Paragraph -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    >
                    <!-- Headline -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_looks_one_24"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/hospitalisierungen"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <!-- Text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:text="@string/hospit_info"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</layout>