<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".mainscreen.home.StartseiteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- RKI daten -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@color/white">

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="16dp"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="26sp"
                        android:text="@string/_7_tage_inzidenz"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/bundesweit"
                        android:textStyle="bold"
                        android:textColor="#99000000"/>


                </LinearLayout>

                <ImageButton
                    android:id="@+id/info_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/ic_baseline_info_24"
                    android:contentDescription="@string/rki_informationen" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/bis_gestern"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="#99000000"/>

                    <TextView
                        android:id="@+id/neuinfektionen_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="34sp"
                        android:text=""
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:text="@string/neuinfektionen"
                        android:textStyle="bold"
                        android:textColor="#99000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/bis_gestern"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="#99000000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="34sp"
                        android:id="@+id/hospitalisiertung_text"
                        android:text=""
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:text="@string/hospitalisierungen"
                        android:textStyle="bold"
                        android:textColor="#99000000"/>
                </LinearLayout>

            </LinearLayout>
            </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

</layout>